MMA-8081 Fiks på testar, deprekeringar og static imports